istio/meshexpansion/bookinfo/bookinfo-ratings-v2-mysql-vm.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ratings-v2-mysql-vm
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ratings
        version: v2-mysql-vm
    spec:
      containers:
      - name: ratings
        image: gcr.io/istio-testing/examples-bookinfo-ratings-v2:0.2.8
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
---
